--- a/m4d/Views/Admin/InitializationTasks.cshtml
+++ b/m4d/Views/Admin/InitializationTasks.cshtml
@@ -36,7 +36,7 @@
     <li>@Html.ActionLink("Times from Properties", "TimesFromProperties")</li>
     <li>@Html.ActionLink("Times from Properties: Batch", "TimesFromProperties", new { exclude = "batch|batch-i|batch-s|batch-a|batch-x|batch-e" }, null)</li>
     <li>@Html.ActionLink("Times from Properties: Recent Batch", "TimesFromProperties", new {exclude="batch|batch-i|batch-s|batch-a|batch-x|batch-e", from= (DateTime.Now - new TimeSpan(1, 0, 0, 0)).ToShortDateString()}, null)</li>
-    <li>@Html.ActionLink("Infer Dance Types", "InferDanceTypes")</li>
+    <li>Infer Dance Types: @Html.ActionLink("Foxtrot", "InferDanceTypes", new { group = "FXT" }, null), @Html.ActionLink("Swing", "InferDanceTypes", new { group = "SWG" }, null), @Html.ActionLink("Tango", "InferDanceTypes", new { group = "TNG" }, null), @Html.ActionLink("Waltz", "InferDanceTypes", new { group = "WLZ" }, null)</li>
     <li>@Html.ActionLink("Region Stats", "RegionStats", "Admin")</li>
 </ul>
 
