--- a/m4d/Views/Shared/_Layout.cshtml
+++ b/m4d/Views/Shared/_Layout.cshtml
@@ -158,11 +158,11 @@
                                 <li>@Html.ActionLink("Diagnostics", "Diagnostics", "Admin")</li>
                                 <li>@Html.ActionLink("Initialization and Cleanup", "InitializationTasks", "Admin")</li>
                                 <li>@Html.ActionLink("Song Scrapers", "Scraping", "Admin")</li>
-                                    @if (User.IsInRole("dbAdmin"))
-                                    {
-                                        <li>@Html.ActionLink("Uploads and Backups", "UploadBackup", "Admin")</li>
-                                    }
-
+                                <li>@Html.ActionLink("PlayLists", "Index", "PlayList")</li>
+                                @if (User.IsInRole("dbAdmin"))
+                                {
+                                    <li>@Html.ActionLink("Uploads and Backups", "UploadBackup", "Admin")</li>
+                                }
                             </ul>
                         </li>
                     }
