--- a/m4d/Views/Admin/Diagnostics.cshtml
+++ b/m4d/Views/Admin/Diagnostics.cshtml
@@ -35,6 +35,7 @@
 <h3>Status</h3>
 <ul>
     <li>@Html.ActionLink("Show Status", "AdminStatus", "Admin")</li>
+    <li>@Html.ActionLink("Reset Admin", "ResetAdmin", "Admin")</li>
 </ul>
 
 <hr />
