Xbox:  Make it so new music doesn't get associated with Groove

--- a/m4d/Views/Song/Augment.cshtml
+++ b/m4d/Views/Song/Augment.cshtml
@@ -7,7 +7,7 @@
 }
 
 <h2>Add Song</h2>
-<p class="big-text">Add a song by entering an ID or URL from Amazon, Groove, ITunes or Spotify and clicking the <b>Find</b> button
+<p class="big-text">Add a song by entering an ID or URL from Amazon, ITunes or Spotify and clicking the <b>Find</b> button
 </p>
 <br />
 <form id="lookup-by-id" class="form-inline">
@@ -27,7 +27,6 @@
             <li><a href='#' id="service-s" class="service-lookup">On Spotify</a></li>
             <li><a href='#' id="service-i" class="service-lookup">On ITunes</a></li>
             <li><a href='#' id="service-a" class="service-lookup">On Amazon</a></li>
-            <li><a href='#' id="service-x" class="service-lookup">On Groove</a></li>
         </ul>
     </div>
 </form>
@@ -61,12 +60,6 @@
 <ul>
     <li><b>ASIN:</b> B0135P6SS4</li>
     <li><b>URL/Link:</b> https://www.amazon.com/gp/product/B0135P6SS4/ref=as_li_ss_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=B0135P6SS4&linkCode=as2</li>
-</ul>
-
-<H3>Groove</H3>
-<ul>
-    <li><b>ID:</b> 5EF98E0A-0100-11DB-89CA-0019B92A3933</li>
-    <li><b>URL/Link:</b> https://mediaredirect.microsoft.com/music/Track/5EF98E0A-0100-11DB-89CA-0019B92A3933</li>
 </ul>
 
 <H3>ITunes</H3>
