--- a/m4d/Views/ApplicationUsers/Index.cshtml
+++ b/m4d/Views/ApplicationUsers/Index.cshtml
@@ -4,8 +4,9 @@
 
 @{
     ViewBag.Title = "Index";
+    var users = Model.Users.ToList();
     var activeUsers = string.Join(",",AccountController.ActiveUsers);
-    var registeredUsers = Model.Users.Count(u => !(u.Email.EndsWith("@music4dance.net") ||
+    var registeredUsers = users.Count(u => !(u.Email.EndsWith("@music4dance.net") ||
                 u.Email.EndsWith("@spotify.com") ||
                 u.Email.EndsWith("@thegray.com")));
 }
@@ -21,23 +22,29 @@
 <hr/>
 
 <p><strong>Active Users:</strong> @activeUsers</p>
+<p><strong>Total Users:</strong> @users.Count</p>
 <p><strong>Registered Users:</strong> @registeredUsers</p>
 <p>@Html.ActionLink("New Pseudo User", "Create", null, new { @class = "btn btn-default", role = "button" })</p>
 
-@{
-    foreach (var service in MusicService.GetServices())
+<table class="table table-striped">
+    <tr><th>Service</th><th>Users</th><th>%</th></tr>
+    @foreach (var service in MusicService.GetServices())
     {
-        var sid = new string(service.CID,1);
-        var c = Model.Users.Count(u => u.ServicePreference.Contains(sid));
-        if (c == 0) {continue;}
+        var sid = new string(service.CID, 1);
+        var c = users.Count(u => u.ServicePreference.Contains(sid));
+        if (c == 0)
+        {
+            continue;
+        }
 
-        <p>@service.Name = @c</p>
+        <tr><td>@service.Name</td><td>@c</td><td>@(((double)c / registeredUsers).ToString("0.##%"))</td></tr>
     }
-}
+    <tr><td>none</td><td>@(users.Count(u => string.IsNullOrEmpty(u.ServicePreference)) - (users.Count - registeredUsers))</td></tr>
+</table>
 
 <hr />
 <h3>Users</h3>
-<table class="table">
+<table class="table table-striped">
     <tr>
         @*
     <th>
@@ -75,6 +82,9 @@
             CNT
         </th>
         <th>
+            SVC
+        </th>
+        <th>
             Roles
         </th>
         <th>
@@ -83,7 +93,7 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model.Users.OrderByDescending(u => u.LastActive > u.StartDate ? u.LastActive : u.StartDate).ToList())
+@foreach (var item in users.OrderByDescending(u => u.LastActive > u.StartDate ? u.LastActive : u.StartDate).ToList())
 {
     var pseudoClass = ApplicationUserManager.IsPseudoUser(item.Email) ? "pseudo-user" : "";
     <tr>
@@ -133,6 +143,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.CanContact)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ServicePreference)
         </td>
         <td>
             @Html.Raw(string.Join("<br/>",Model.GetRoles(item.Id)))
