--- a/m4d/Views/Home/Index.cshtml
+++ b/m4d/Views/Home/Index.cshtml
@@ -167,6 +167,8 @@
         <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/dances/ballroom-competition-categories") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-category/") @SmartLink.Posts("https://www.music4dance.net/blog/im-a-competition-ballroom-dancer-can-i-find-practice-songs-that-are-a-specific-tempo/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Tag songs to create your own ways of making song lists</dt>
         <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/account/signup") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tag-editing/") @SmartLink.Posts("https://www.music4dance.net/blog/lets-tag-some-songs/")</dd>
+        <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find holiday music to dance to.</dt>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/dances/holiday-music") @SmartLink.Posts("https://www.music4dance.net/blog/tag/holiday/")</dd>
     </dl>
     <p>Don't see your style of dance here? <a href="https://www.music4dance.net/blog/feedback/">Let us know</a> and we'll be happy to expand our catalog.</p>
     <p>Do you use a different streaming provider or purchase your music from a different source? <a href="https://www.music4dance.net/blog/feedback/">Tell us about it</a> and we'll take a look into expanding our support.</p>
