--- a/m4d/Views/Shared/_Layout.cshtml
+++ b/m4d/Views/Shared/_Layout.cshtml
@@ -125,6 +125,7 @@
                                 }
                             </li>
                             <li>@Html.ActionLink("Wedding", "wedding-music", "dances")</li>
+                            <li>@Html.ActionLink("Holiday", "holiday-music", "dances")</li>
                             <li>@Html.ActionLink("Tags", "index", "tag")</li>
                         </ul>
                     </li>
