Small improvement to main dance page

--- a/m4d/Views/Dance/Index.cshtml
+++ b/m4d/Views/Dance/Index.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Dance Style Index";
     ViewBag.Description = "A list of partner dancing styles, including Ballroom, Salsa, Swing, and Tango.";
     ViewBag.ShowTempo = false;
-    string[] boxes = { "LTN", "SWG", "FXT", "TNG", "WLZ", "MSC" };
+    string[] boxes = { "LTN", "SWG", "FXT", "TNG", "MSC", "WLZ" };
 }
 
 @helper LinkCategory(string name)
