--- a/m4d/App_Code/SongHelper.cshtml
+++ b/m4d/App_Code/SongHelper.cshtml
@@ -10,6 +10,18 @@
     </div>
 }
 
+@helper CustomHeader(System.Web.Mvc.HtmlHelper html, string description)
+{
+    var parts = description.Split('|');
+    <h1>@parts[0]</h1>
+    if (parts.Length > 1)
+    {
+        <div class="row">
+            <h4 class="col-sm-12">@parts[1]</h4>
+        </div>
+    }
+}
+
 // Advanced search header
 @helper AdvancedHeader(System.Web.Mvc.HtmlHelper html, SongFilter filter){
     var url = "/song/" + (filter.IsRaw ? "raw" : "advanced") + "searchform?filter=" + filter;
@@ -83,9 +95,9 @@
     }
 }
 
-@helper SearchHeader(System.Web.Mvc.HtmlHelper html, SongFilter filter, IList<DanceStats> dances, string userName)
+@helper SearchHeader(System.Web.Mvc.HtmlHelper html, SongFilter filter, IList<DanceStats> dances, string userName, string description)
 {
-    @(filter.IsAdvanced ? AdvancedHeader(html, filter) : SimpleHeader(html, filter, dances, userName))
+    @(string.IsNullOrWhiteSpace(description) ? (filter.IsAdvanced ? AdvancedHeader(html, filter) : SimpleHeader(html, filter, dances, userName)) : CustomHeader(html,description))
 }
 
 @helper Footer(System.Web.Mvc.HtmlHelper html, UrlHelper urlHelp, PagedList.IPagedList<Song> songs, SongFilter filter)
@@ -117,7 +129,7 @@
             }
         </div>
     </div>
-    if (!danceQuery.IncludeInferred)
+    if (!danceQuery.IncludeInferred && !filter.IsRaw)
     {
         var newFilter = filter.ToggleInferred();
         <div class="row">
