--- a/m4d/Views/Song/AzureSearch.cshtml
+++ b/m4d/Views/Song/AzureSearch.cshtml
@@ -4,19 +4,20 @@
 @{
     SongFilter filter = ViewData.ContainsKey("SongFilter") ? ViewBag.SongFilter : SongFilter.AzureSimple;
 
-    var description = filter.Description;
+    var description = ViewData.ContainsKey("Description") ? ViewBag.Description : null;
 
     ViewBag.Title = "Songs for Dancing";
-    ViewBag.Description = "music4dance catalog: " + description;
+    ViewBag.Description = "music4dance catalog: " + description??filter.Description;
 
     var dances = (IList<DanceStats>)ViewBag.Dances;
 
     var userName = filter.UserQuery.IsEmpty ? User.Identity.Name : filter.UserQuery.UserName;
+
 }
 
 @Html.Partial("_SetupFilterScript")
 
-@SongHelper.SearchHeader(Html, filter, dances, userName)
+@SongHelper.SearchHeader(Html, filter, dances, userName, description)
 
 
 @if (User.IsInRole("dbAdmin"))
