--- a/m4d/Views/Song/RawSearchForm.cshtml
+++ b/m4d/Views/Song/RawSearchForm.cshtml
@@ -8,51 +8,59 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h1>Raw Search</h1>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+<div class="form-horizontal">
+    <h1>Raw Search</h1>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.SearchText, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SearchText, new { htmlAttributes = new { @class = "form-control wide-text-control" } })
-                @Html.ValidationMessageFor(model => model.SearchText, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.SearchText, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.SearchText, new { htmlAttributes = new { @class = "form-control wide-text-control" } })
+            @Html.ValidationMessageFor(model => model.SearchText, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ODataFilter, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ODataFilter, new { htmlAttributes = new { @class = "form-control wide-text-control" } })
-                @Html.ValidationMessageFor(model => model.ODataFilter, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.ODataFilter, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.ODataFilter, new { htmlAttributes = new { @class = "form-control wide-text-control" } })
+            @Html.ValidationMessageFor(model => model.ODataFilter, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Sort, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Sort, new { htmlAttributes = new { @class = "form-control wide-text-control" } })
-                @Html.ValidationMessageFor(model => model.Sort, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Sort, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Sort, new { htmlAttributes = new { @class = "form-control wide-text-control" } })
+            @Html.ValidationMessageFor(model => model.Sort, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.IsLucene, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.IsLucene)
-                    @Html.ValidationMessageFor(model => model.IsLucene, "", new {@class = "text-danger"})
-                </div>
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control wide-text-control" } })
+            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
         </div>
+    </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <button id="submit-search" class="btn btn-default" type="submit">Search <span class="glyphicon glyphicon-search"></span></button>
+    <div class="form-group">
+        @Html.LabelFor(model => model.IsLucene, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <div class="checkbox">
+                @Html.EditorFor(model => model.IsLucene)
+                @Html.ValidationMessageFor(model => model.IsLucene, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <button id="submit-search" class="btn btn-default" type="submit">Search <span class="glyphicon glyphicon-search"></span></button>
+        </div>
+    </div>
+</div>
 }
 
 @if (ViewData.ContainsKey("AzureIndexInfo"))
