--- a/m4d/Views/Song/RawSearchForm.cshtml
+++ b/m4d/Views/Song/RawSearchForm.cshtml
@@ -46,6 +46,16 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(model => model.CruftFilter, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <div class="checkbox">
+                @Html.EditorFor(model => model.CruftFilter)
+                @Html.ValidationMessageFor(model => model.CruftFilter, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(model => model.IsLucene, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <div class="checkbox">
