Include Serach field in Raw Search - Also get round tripping and copyable query field - This may be the end of the raw search improvements for now...

--- a/m4d/Views/Song/AzureSearch.cshtml
+++ b/m4d/Views/Song/AzureSearch.cshtml
@@ -61,7 +61,8 @@ else
 {
     <div class="row">
         <div class="col-md-12">
-            <b>Raw Search: </b>@WebUtility.UrlDecode(ViewBag.RawSearch.ToString())
+            <b>Raw Search: </b>@WebUtility.UrlDecode(ViewBag.RawSearch.ToString())<br />
+            <b>Query STring: </b>@(new RawSearch(filter).QueryString())
         </div>
     </div>
 }
