--- a/m4d/Views/Song/RawSearchForm.cshtml
+++ b/m4d/Views/Song/RawSearchForm.cshtml
@@ -30,10 +30,18 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Sort, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.SortFields, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Sort, new { htmlAttributes = new { @class = "form-control wide-text-control" } })
-            @Html.ValidationMessageFor(model => model.Sort, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.SortFields, new { htmlAttributes = new { @class = "form-control wide-text-control" } })
+            @Html.ValidationMessageFor(model => model.SortFields, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.SearchFields, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.SearchFields, new { htmlAttributes = new { @class = "form-control wide-text-control" } })
+            @Html.ValidationMessageFor(model => model.SearchFields, "", new { @class = "text-danger" })
         </div>
     </div>
 
