--- a/m4d/Views/Song/AzureSearch.cshtml
+++ b/m4d/Views/Song/AzureSearch.cshtml
@@ -62,7 +62,15 @@ else
     <div class="row">
         <div class="col-md-12">
             <b>Raw Search: </b>@WebUtility.UrlDecode(ViewBag.RawSearch.ToString())<br />
-            <b>Query STring: </b>@(new RawSearch(filter).QueryString())
+        </div>
+    </div>
+}
+
+@if (User.IsInRole("showDiagnostics") && filter.IsRaw)
+{
+    <div class="row">
+        <div class="col-md-12">
+            <b>Query String: </b>@(new RawSearch(filter).QueryString())
         </div>
     </div>
 }
@@ -75,7 +83,7 @@ else
         <span>User:</span> <input type="text" name="user" />
         <br />
         <span>Properties:</span> <input type="text" name="properties" />
-        <input type="hidden" name="filter" value="@filter"/>
+        <input type="hidden" name="filter" value="@filter" />
         <input type="submit" name="BatchAdminEdit" id="Submit" value="Upload" />
     }
 
