--- a/m4d/Views/Song/Augment.cshtml
+++ b/m4d/Views/Song/Augment.cshtml
@@ -4,76 +4,90 @@
     ViewBag.Title = "Add Song";
     ViewBag.Action = "Add";
     ViewBag.Submit = "Add";
+    var canTag = User.IsInRole("canTag");
 }
 
 <h2>Add Song</h2>
-<p class="big-text">Add a song by entering an ID or URL from Amazon, ITunes or Spotify and clicking the <b>Find</b> button
+<p class="big-text">
+    Add a song by entering an ID or URL from Amazon, ITunes or Spotify and clicking the <b>Find</b> button
 </p>
 <br />
-<form id="lookup-by-id" class="form-inline">
-    <div class="form-group">
-        <label for="idString">ID/URL</label>
-        <input type="text" class="form-control" id="idString">
-    </div>
-    <!-- Split button -->
-    <div class="btn-group">
-        <button type="button" id="service-" value="0" class="btn btn-primary service-lookup">Find</button>
-        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="caret"></span>
-            <span class="sr-only">Toggle Dropdown</span>
-        </button>
-        <ul class="dropdown-menu">
-            <li><a href='#' id="service-0" class="service-lookup">Find</a></li>
-            <li><a href='#' id="service-s" class="service-lookup">On Spotify</a></li>
-            <li><a href='#' id="service-i" class="service-lookup">On ITunes</a></li>
-            <li><a href='#' id="service-a" class="service-lookup">On Amazon</a></li>
-        </ul>
-    </div>
-</form>
 
-<div data-bind="with: song"><a class="label label-music" data-bind="attr: {href: '/song/edit?id=' + SongId + '&tempo=' + $root.tempo()}">Edit</a> <em data-bind="text:Title"></em> by <strong data-bind="text:Artist"></strong></div>
-<div data-bind="with: track">
-    <a class="label label-music" data-bind="attr: {href: '/song/create?title=' + Name + '&artist=' + Artist + '&length=' + Duration + '&tempo=' + $root.tempo()+ '&album=' + Album + '&track=' + TrackNumber + '&service=S&purchase=' + TrackId}">Create</a>
-    <em data-bind="text:Name"></em> by <strong data-bind="text:Artist"></strong> on <span data-bind="text:Album"></span> (<span data-bind="text:TrackNumber"></span>)
-</div>
-<div data-bind="text: error" class="field-validation-error big-text"></div>
-
-@using (Html.BeginForm("Create", "Song", null, FormMethod.Get, new {id="create"}))
+@if (canTag)
 {
-    @*@Html.AntiForgeryToken()*@
-    <input type="hidden" name="service" id="service"/>
-    <input type="hidden" name="purchase" id="purchase" />
-}
+    <form id="lookup-by-id" class="form-inline">
+        <div class="form-group">
+            <label for="idString">ID/URL</label>
+            <input type="text" class="form-control" id="idString">
+        </div>
+        <!-- Split button -->
+        <div class="btn-group">
+            <button type="button" id="service-" value="0" class="btn btn-primary service-lookup">Find</button>
+            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="caret"></span>
+                <span class="sr-only">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu">
+                <li><a href='#' id="service-0" class="service-lookup">Find</a></li>
+                <li><a href='#' id="service-s" class="service-lookup">On Spotify</a></li>
+                <li><a href='#' id="service-i" class="service-lookup">On ITunes</a></li>
+                <li><a href='#' id="service-a" class="service-lookup">On Amazon</a></li>
+            </ul>
+        </div>
+    </form>
 
-@using (Html.BeginForm("Edit", "Song", null, FormMethod.Get, new { id = "edit" }))
-{
-    @*@Html.AntiForgeryToken()*@
-    <input type="hidden" name="id" id="id" />
-}
+    <div data-bind="with: song">Found song <em data-bind="text:Title"></em> by <strong data-bind="text:Artist"></strong> in the Music4DanceCatalog.  You should see the edit page shortly...</div>
+    <div data-bind="with: track">Creating an entry for <em data-bind="text:Name"></em> by <strong data-bind="text:Artist"></strong> on <span data-bind="text:Album"></span> (<span data-bind="text:TrackNumber"></span>)
+    in the Music4DanceCatalog.  You should see the edit page shortly...</div>
+    <div data-bind="text: error" class="field-validation-error big-text"></div>
 
-<br/>
-<p class="big-text">Each source of music has a different way of identifying songs, in general you can copy whatever sharing link they provide and paste it into the box above.
-    Below are some samples of the recognized formats of each type.
-    More help is availble <a href="https://www.music4dance.net/blog/music4dance-help/beta/">here</a>.
+    using (Html.BeginForm("Create", "Song", null, FormMethod.Get, new {id = "create"}))
+    {
+        @*@Html.AntiForgeryToken()*@
+        <input type="hidden" name="service" id="service"/>
+        <input type="hidden" name="purchase" id="purchase"/>
+    }
+
+    using (Html.BeginForm("Edit", "Song", null, FormMethod.Get, new {id = "edit"}))
+     {
+        @*@Html.AntiForgeryToken()*@
+        <input type="hidden" name="id" id="id"/>
+     }
+
+    <br/>
+    <p class="big-text">
+        Each source of music has a different way of identifying songs, in general you can copy whatever sharing link they provide and paste it into the box above.
+        Below are some samples of the recognized formats of each type.
+        More help is availble <a href="https://www.music4dance.net/blog/adding-songs-beta/">here</a>.
     </p>
-<H3>Amazon</H3>
-<ul>
-    <li><b>ASIN:</b> B0135P6SS4</li>
-    <li><b>URL/Link:</b> https://www.amazon.com/gp/product/B0135P6SS4/ref=as_li_ss_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=B0135P6SS4&linkCode=as2</li>
-</ul>
+    <H3>Amazon</H3>
+    <ul>
+        <li><b>ASIN:</b> B0135P6SS4</li>
+        <li><b>URL/Link:</b> https://www.amazon.com/gp/product/B0135P6SS4/ref=as_li_ss_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=B0135P6SS4&linkCode=as2</li>
+    </ul>
 
-<H3>ITunes</H3>
-<ul>
-    <li><b>ID:</b> 320891562</li>
-    <li><b>URL/Link:</b> https://itunes.apple.com/album/id320891304?i=320891562&ign-mpt=uo%3D4</li>
-</ul>
+    <H3>ITunes</H3>
+    <ul>
+        <li><b>ID:</b> 320891562</li>
+        <li><b>URL/Link:</b> https://itunes.apple.com/album/id320891304?i=320891562&ign-mpt=uo%3D4</li>
+    </ul>
 
-<H3>Spotify</H3>
-<ul>
-    <li><b>ID:</b> 5kXbjaPptGdfQmMfeJCXlS</li>
-    <li><b>URI:</b> spotify:track:5kXbjaPptGdfQmMfeJCXlS</li>
-    <li><b>URL/Link:</b> https://open.spotify.com/track/5kXbjaPptGdfQmMfeJCXlS</li>
-</ul>
+    <H3>Spotify</H3>
+    <ul>
+        <li><b>ID:</b> 5kXbjaPptGdfQmMfeJCXlS</li>
+        <li><b>URI:</b> spotify:track:5kXbjaPptGdfQmMfeJCXlS</li>
+        <li><b>URL/Link:</b> https://open.spotify.com/track/5kXbjaPptGdfQmMfeJCXlS</li>
+    </ul>
+}
+else
+{
+    <p>Adding songs is a by invitation beta feature.  If you are interested in adding songs please do the following:</p>
+    <ul>
+        <li><a href="https://www.music4dance.net/account/signup">Create and account</a>  (<a href="https://www.music4dance.net/blog/music4dance-help/account-management/">Account Management Help</a>).</li>
+        <li>Send email to <a href="mailto:david@music4dance.net">info@music4dance.net</a> or fill out our <a href="https://www.music4dance.net/blog/feedback/">feedback form</a> and ask to participate in the adding songs beta.</li>
+    </ul>
+    <p>If you've already signed up for the beta and are <a href="https://www.music4dance.net/account/signin">signed in</a> but still seeing this message, we are still evaluting your request, please be patient.</p>
+}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
