Fix spotify player

--- a/m4d/Views/Dance/Details.cshtml
+++ b/m4d/Views/Dance/Details.cshtml
@@ -122,7 +122,7 @@
 
 
     <section id="spotify-player">
-        <iframe src="https://embed.spotify.com/?uri=spotify:trackset:@Model.DanceName:@topSpotify" frameborder="0" allowtransparency="true"></iframe>
+        <iframe src="https://open.spotify.com/embed?uri=spotify:trackset:@Model.DanceName:@topSpotify" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </section>
 
     <div>
