Updated Privacy Policy

--- a/m4d/Views/Home/PrivacyPolicy.cshtml
+++ b/m4d/Views/Home/PrivacyPolicy.cshtml
@@ -3,13 +3,13 @@
     ViewBag.Title = "PrivacyPolicy";
 }
 
-<h2>
+<h1>
     Privacy Policy
-</h2>
+</h1>
 
-<p>
+<h2>
     Your privacy is very important to us. Accordingly, we have developed this Policy in order for you to understand how we collect, use, communicate and disclose and make use of personal information. The following outlines our privacy policy.
-</p>
+</h2>
 
 <ul>
     <li>
@@ -39,4 +39,38 @@
     We are committed to conducting our business in accordance with these principles in order to ensure that the confidentiality of personal information is protected and maintained.
 </p>
 
+<h2 id="GDPR">
+    In light of the European Union's new GDPR rule, we're including the following specific details of our data use.
+</h2>
 
+<h3>All visitors to music4dance.net:</h3>
+<ul>
+    <li>We collect data and use cookies to improve your experience by measuring anonymized user data via Google Analytics.  Specifically we do not associate Google Analytics data with your music4dance.net account</li>
+    <li>We collect data and use cookies for ad personalization and measurement.  <b>Note:</b> For EU residents we are currently disabling personalized ads, however the generic add experience still uses cookies to manage the number of ads that are displayed.</li>
+</ul>
+
+<h3>music4dance.net Account Holders:</h3>
+<p>We retain the following additional information:</p>
+<ul>
+    <li>Email address</li>
+    <li>An encrypted version of your password</li>
+    <li>The necessary keys to connect your account to any associated social media accounts that you've linked to your music4dance account</li>
+    <li>The date you signed up</li>
+    <li>The last date that you signed in</li>
+    <li>A list of your searches on the site</li>
+    <li>A list of your likes and tags</li>
+</ul>
+<p>The specifics of your social media logins are available to you on your <a href="https://www.music4dance.net/manage/settings">account settings page</a></p>
+<h3>User Profile:</h3>
+<p>If you filled out our registration form, we also retain the information from the form, which is:</p>
+<ul>
+    <li>Your region</li>
+    <li>Which music services you prefer</li>
+    <li>Your contact preferences</li>
+</ul>
+<p>The specifics of your user profile information is avaiable to you on your <a href="https://www.music4dance.net/manage/userprofile">user profile page</a>.</p>
+<p>The specifics of your saved searches are avaiable to you on your <a href="https://www.music4dance.net/manage/userprofile">user profile page</a>.</p>
+<p>The specifics of your searches, likes and tags are available on your "My searches" and "My songs" pages under the account menu.</p>
+<p>More information on how Google uses cookies to manage ads is available <a href="https://policies.google.com/technologies/ads">here</a>.</p>
+
+<p>If you have an questions or would like to delete your account information, please contact us at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or through our <a href="https://www.music4dance.net/blog/feedback/">feedback form</a>.</p>
