Cookie consent + More Privacy Policy

--- a/m4d/Views/Home/Credits.cshtml
+++ b/m4d/Views/Home/Credits.cshtml
@@ -11,6 +11,7 @@
 
 <p>Music4dance.net is built with <a href="http://www.asp.net/mvc">asp.net mvc5</a> using <a href="http://getbootstrap.com/">Twitter Bootstrap</a> for the presentation layter, <a href="http://azure.microsoft.com/en-us/services/sql-database/">SQL Azure</a> and <a href="http://www.asp.net/entity-framework">Entity Framework</a> for the database and <a href="http://jquery.com/">jQuery</a> and <a href="http://knockoutjs.com/">knockoutjs</a> as the primary front end libraries.</p>
 <p>The site is hosted on <a href="http://azure.microsoft.com">Microsoft Azure</a>.</p>
+<p>The <a href="https://cookieconsent.insites.com">cookie consent control</a> was created by <a href="https://insites.com">silktide insites</a></p>
 
 <h2>Design</h2>
 
