--- a/m4d/Views/Home/PrivacyPolicy.cshtml
+++ b/m4d/Views/Home/PrivacyPolicy.cshtml
@@ -68,9 +68,10 @@
     <li>Which music services you prefer</li>
     <li>Your contact preferences</li>
 </ul>
-<p>The specifics of your user profile information is avaiable to you on your <a href="https://www.music4dance.net/manage/userprofile">user profile page</a>.</p>
-<p>The specifics of your saved searches are avaiable to you on your <a href="https://www.music4dance.net/manage/userprofile">user profile page</a>.</p>
+<p>The specifics of your user profile information is available to you on your <a href="https://www.music4dance.net/manage/userprofile">user profile page</a>.</p>
+<p>The specifics of your saved searches are available to you on your <a href="https://www.music4dance.net/manage/userprofile">user profile page</a>.</p>
 <p>The specifics of your searches, likes and tags are available on your "My searches" and "My songs" pages under the account menu.</p>
-<p>More information on how Google uses cookies to manage ads is available <a href="https://policies.google.com/technologies/ads">here</a>.</p>
 
+<p>More information on how Google uses cookies to manage ads is available <a href="https://policies.google.com/technologies/ads">here</a>.</p>
+<p>If you would like more information about what cookies are and how to disable them <a href="https://cookiesandyou.com/">this website</a> is an excellent reference.</p>
 <p>If you have an questions or would like to delete your account information, please contact us at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or through our <a href="https://www.music4dance.net/blog/feedback/">feedback form</a>.</p>
