Get most of delete user working - set up the link in the settings pate - write the actual account wiping code - get changeusername working so that we can retain the song scoring as an anonymous guid - still remaining: need to get logoff working as part of the account deletion (the user should land back on the homepage as an anonymous user, or possibly on a goodbye page)

--- a/m4d/Views/Shared/_Layout.cshtml
+++ b/m4d/Views/Shared/_Layout.cshtml
@@ -100,7 +100,7 @@
                 },
                 "theme": "classic",
                 "content": {
-                    "href": "www.music4dance.net/home/privacypolicy#GDPR"
+                    "href": "home/privacypolicy#GDPR"
                 }
             })});
     </script>
