--- a/m4d/Views/Manage/Settings.cshtml
+++ b/m4d/Views/Manage/Settings.cshtml
@@ -27,53 +27,56 @@
             @Model.Logins.Count [
             @Html.ActionLink("Manage", "ManageLogins") ]
         </dd>
+        <dd>
+            @Html.ActionLink("Delete Account", "DeleteUser")
+        </dd>
         @*
-            Phone Numbers can used as a second factor of verification in a two-factor authentication system.
+        Phone Numbers can used as a second factor of verification in a two-factor authentication system.
 
-             See <a href="http://go.microsoft.com/fwlink/?LinkId=313242">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication using SMS.
+         See <a href="http://go.microsoft.com/fwlink/?LinkId=313242">this article</a>
+            for details on setting up this ASP.NET application to support two-factor authentication using SMS.
 
-             Uncomment the following block after you have set up two-factor authentication
+         Uncomment the following block after you have set up two-factor authentication
         *@
         @*
-            <dt>Phone Number:</dt>
-            <dd>
-                @(Model.PhoneNumber ?? "None") [
-                @if (Model.PhoneNumber != null)
+        <dt>Phone Number:</dt>
+        <dd>
+            @(Model.PhoneNumber ?? "None") [
+            @if (Model.PhoneNumber != null)
+            {
+                @Html.ActionLink("Change", "AddPhoneNumber")
+                @: &nbsp;|&nbsp;
+                @Html.ActionLink("Remove", "RemovePhoneNumber")
+            }
+            else
+            {
+                @Html.ActionLink("Add", "AddPhoneNumber")
+            }
+            ]
+        </dd>
+        *@
+        @*<dt>Two-Factor Authentication:</dt>
+        <dd>
+            <p>
+                There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=313242">this article</a>
+                for details on setting up this ASP.NET application to support two-factor authentication.
+            </p>
+            @if (Model.TwoFactor)
                 {
-                    @Html.ActionLink("Change", "AddPhoneNumber")
-                    @: &nbsp;|&nbsp;
-                    @Html.ActionLink("Remove", "RemovePhoneNumber")
+
+                    <form method="post" action="/Manage/DisableTwoFactorAuthentication">
+                        Enabled
+                        <input type="submit" value="Disable" class="btn btn-link" />
+                    </form>
                 }
                 else
                 {
-                    @Html.ActionLink("Add", "AddPhoneNumber")
+
+                    <form method="post" action="/Manage/EnableTwoFactorAuthentication">
+                        Disabled
+                        <input type="submit" value="Enable" class="btn btn-link" />
+                    </form>
                 }
-                ]
-            </dd>
-        *@
-        @*<dt>Two-Factor Authentication:</dt>
-            <dd>
-                <p>
-                    There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=313242">this article</a>
-                    for details on setting up this ASP.NET application to support two-factor authentication.
-                </p>
-                @if (Model.TwoFactor)
-                    {
-
-                        <form method="post" action="/Manage/DisableTwoFactorAuthentication">
-                            Enabled
-                            <input type="submit" value="Disable" class="btn btn-link" />
-                        </form>
-                    }
-                    else
-                    {
-
-                        <form method="post" action="/Manage/EnableTwoFactorAuthentication">
-                            Disabled
-                            <input type="submit" value="Enable" class="btn btn-link" />
-                        </form>
-                    }
-            </dd>*@
+        </dd>*@
     </dl>
 </div>
