Finish off delete account

--- a/m4d/Views/Home/PrivacyPolicy.cshtml
+++ b/m4d/Views/Home/PrivacyPolicy.cshtml
@@ -71,7 +71,11 @@
 <p>The specifics of your user profile information is available to you on your <a href="https://www.music4dance.net/manage/userprofile">user profile page</a>.</p>
 <p>The specifics of your saved searches are available to you on your <a href="https://www.music4dance.net/manage/userprofile">user profile page</a>.</p>
 <p>The specifics of your searches, likes and tags are available on your "My searches" and "My songs" pages under the account menu.</p>
+<p>You may permenantly delete all of your personal information and remove your account access by choosing the <b>delete</b> option from your <a href="https://www.music4dance.net/manage/settings">account settings</a> page.</p>
+
+<h3>Data Protection</h3>
+<p>All of the above data is stored in a Microsoft SQL database in the Microsoft Azure cloud and is only accessable via the music4dance.net site by anyone other than music4dance.net employees.  A very limitted number of music4dance.net employees (currently 1) have access to the underlying database via the Azure portal.</p>
 
 <p>More information on how Google uses cookies to manage ads is available <a href="https://policies.google.com/technologies/ads">here</a>.</p>
 <p>If you would like more information about what cookies are and how to disable them <a href="https://cookiesandyou.com/">this website</a> is an excellent reference.</p>
-<p>If you have an questions or would like to delete your account information, please contact us at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or through our <a href="https://www.music4dance.net/blog/feedback/">feedback form</a>.</p>
+<p>If you have any questions please contact us at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or through our <a href="https://www.music4dance.net/blog/feedback/">feedback form</a>.</p>
