Remove Roles and Logins from index - Move down to details - This massively improves performance of the details page - Still need to verify that logins show up on details - Check why we're not pulling logins down during backup

--- a/m4d/Views/ApplicationUsers/Details.cshtml
+++ b/m4d/Views/ApplicationUsers/Details.cshtml
@@ -35,6 +35,14 @@
         </dd>
 
         <dt>
+            Login(s)
+        </dt>
+
+        <dd>
+            @Model.GetProviders()
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Email)
         </dt>
 
