Small cleanup of azure search and playlist loading

--- a/m4d/Views/Shared/_ListSongs.cshtml
+++ b/m4d/Views/Shared/_ListSongs.cshtml
@@ -424,7 +424,7 @@
                                 var filterT = new SongFilter(filter.ToString());
                                 if (hasDance ? (numDances > 1) : (numDances > 0))
                                 {
-                                    filterT.Action = azureSearch ? "azure+advanced":"advanced";
+                                    filterT.Action = "advanced";
                                 }
 
                                 var urlFiltered = string.Empty;
